2004-01-08  Jani Monoses <jani@iv.ro>

	* src/diag.cxx (diag_check_string): Allow '\t' in format strings.
	
2004-01-05  Gary Thomas  <gary@mlbassoc.com>

	* tests/fc_test.c: 
	* src/tcdiag.cxx (cyg_assert_msg): 'fconfig' API changed again.

2003-12-21  Gary Thomas  <gary@mlbassoc.com>

	* tests/fc_test.c: New test/demonstration of 'fconfig' access.

	* src/tcdiag.cxx (cyg_assert_msg): Interface to 'fconfig' data
	has changed.

2003-10-11  Gary Thomas  <gary@mlbassoc.com>

	* src/tcdiag.cxx (cyg_test_exit): 
	* cdl/infra.cdl: New option CYGSEM_INFRA_RESET_ON_TEST_EXIT which
	[if defined] indicates that "cyg_test_exit()" should reset the 
	platform instead of the default hang.

2003-10-03  Nick Garnett  <nickg@balti.calivar.com>

	* tests/cxxsupp.cxx: Added ifdef to disable this test on H8/300
	targets. The H8/300 toolchain does not currently have C++ support.

2003-07-01  Michael Checky  <Michael_Checky@ThermoKing.com>

	* src/diag.cxx: Added support for the 'z' qualifier in format strings.

2003-05-05  Gary Thomas  <gary@mlbassoc.com>

	* cdl/infra.cdl: Add option to control number of times tests run.

2003-04-25  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/cxxsupp.cxx: don't include <pkgconf/kernel.h> as it's not
	needed.
	(cyg_start): CYGINT_ISO_MALLOC needs a #if test.

2003-04-10  Nick Garnett  <nickg@balti.calivar.com>

	* tests/cxxsupp.cxx: Added this test program to check that basic
	C++ support is present. It checks that pure virtual functions can
	be defined, that new and delete are present and functional, and
	that calls to as-yet undefined inline functions work. Most of
	these are linker and runtime system issues, so the actual run of
	the program is almost a non-event.

	* cdl/infra.cdl:
	Added CYGFUN_INFRA_DUMMY_ABORT and CYGFUN_INFRA_DUMMY_STRLEN
	options to control inclusion of dummy abort() and strlen()
	functions. These are needed to be present by the compiler's C++
	runtime system, although they should never be called.